# PAMOLA

./: .coveragerc  .gitignore  CHANGELOG.md  HR_RESUMES_CA_V2_passport.json  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
anonymization/: perturbation.py
configs/: config.json  demo_task.json  pipeline.json  prj_config.json  prj_config.yaml  structure_config.json  t_1I.json  t_2I.json  task.json
core/: __init__.py  base_processor.py  config.py
core/attack_simulation/: attack_metrics.py  attacks_test.py  attribute_inference.py  base.py  distance_to_closest_record.py  linkage_attack.py  membership_inference.py  nearest_neighbor_distance_ratio.py  preprocess_data.py
core/data_profiling/: base.py  detect_profiling.py
core/interface/: __init__.py
core/metrics/: __init__.py  base.py
core/privacy_models/: base.py  (+1 more)
data/: GOODS.csv  README.md  SHOPPING_CENTERS.csv
docs/: Makefile  PAMOLA_CORE_OPERATIONS_REPORT.md  PAMOLA_OPS_TASKS_FRAMEWORK_ANALYSIS.md  README.md  architecture-data-flows.md  architecture-security.md  code-standards.md  codebase-summary.md  conf.py  index.rst  make.bat  project-overview-pdr.md  project-roadmap.md  system-architecture.md
examples/: README.md  USE_ENTROPY.py  USE_K_ANONYMITY.py  USE_L_DIVERSITY.py  USE_T_CLOSENESS.py  marketing_attribution_1.ipynb
metrics/: anonymity_metrics.py  divergence_metrics.py
pamola_core/: __init__.py  _version.py  base_processor.py  config.py  main.py
pamola_datasets/: categorical_sample_data.csv  category_hierarchy_mapping.csv  test_datetime_data.csv  test_numeric_generalization.csv
tests/: README.md  test_field_name_utils.py  test_version.py
utils/: entropy.py  field_name_utils.py  load_data.py
(+1778 files in other folders)
