[project]
name = "pamola-core"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

authors = [
  { name = "Author", email = "author@example.com" },
]
maintainers = [
  { name = "Maintainer", email = "maintainer@example.com" }
]

description = "Pamola Core library for data anonymization, privacy models, metrics, and utilities"
readme = "README.md"
license = { text = "BSD-3-Clause" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-decouple==3.8",
    "pydantic[email]==2.12.4",
    "matplotlib==3.8.2",
    "seaborn==0.13.2",
    "pandas==2.2.2",
    "torch==2.8.0",
    "scikit-learn==1.7.2",
    "deepdiff==8.6.1",
    "diff-match-patch==20241021",
    "sdv==1.18.0",
    "faker==33.3.1",
    "scipy==1.16.3",
    "uvicorn[standard]==0.38.0",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "rstr==3.2.2",
    "recordlinkage==0.16",
    "plotly==6.4.0",
    "kaleido==1.2.0",
    "pillow==11.3.0",
    "multidict==6.7.0",
    "bcrypt==4.3.0",
    "wordcloud==1.9.4",
    "langdetect==1.0.9",
    "fasttext-wheel==0.9.2",
    "datasketch==1.7.0",
    "nltk==3.9.2",
    "dask[complete]==2025.11.0",
    "pyarrow==14.0.2",
    "numpy==1.26.4",
    "pytest==8.4.2",
    "matplotlib-venn==1.1.2",
    "psutil==5.9.8",
    "ijson==3.4.0.post0",
    "chardet==5.2.0",
    "rapidfuzz==3.14.3",
    "cachetools==6.2.2",
    "faiss-cpu==1.12.0",
    "spacy==3.8.9",
    "phonenumbers==9.0.10",
    "base58==2.1.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pamola_core*"]
